--- a/Language/testcases/pex3/test1.txt
+++ b/Language/testcases/pex3/test1.txt
@@ -1,3 +1,101 @@
-﻿main(
-	float x;
-)
+﻿  // ------------------------------------------------------------
+  // Control Structures:  If Statements
+  // ------------------------------------------------------------ 
+  func Test6()(
+    printString("IfStatementTest");
+
+    if (1.0 + 1.0 < 3.0) (
+      printString("If(true)StatementPasses");
+    )
+    else (
+      printString("If(true)StatementFails");
+    )
+
+    if (5.0 * 3.0 < 1) (
+      printString("If(false)StatementFails");
+    )
+    else (
+      printString("If(false)StatementPasses");
+    )
+
+    printString("\n");
+
+    // Testing to See if Function Calls within a Function Work
+    Test7();
+  )
+
+  // ------------------------------------------------------------
+  // Control Structures:  Nested If Statements
+  // ------------------------------------------------------------
+  func Test7() (
+    printString("NestedIfStatementTest");
+    
+    if (3 > 2) (
+      if (5 < 4) (
+        printString("NestedIfStatementFails");
+      )
+      else (
+        printString("NestedIfStatementPasses");
+      )
+    )
+
+    printString("\n");
+  )
+
+  // ------------------------------------------------------------
+  // Control Structures:  While Statements
+  // ------------------------------------------------------------ 
+  func Test8() (
+    printString("WhileLoopTest");
+    
+    int i;
+    i = 0;
+
+    while (10 > i) (
+      printInt(i);
+      i = i + 1;
+    )
+
+    printString("LoopComplete");
+    printString("\n");
+
+    // Testing to See if Function Calls within a Function Work
+    Test9();
+  )
+
+  // ------------------------------------------------------------
+  // Control Structures:  Nested While Statements
+  // ------------------------------------------------------------ 
+  public static void Test9() (
+    printString("NestedWhileLoopTest");
+    
+    int x;
+    x = 0;
+    int y;
+    y = 0;
+
+    while (3 > y) (
+      while (3 > x) (
+        printString("x:")
+        printInt(x);
+        printString("y:")
+        printInt(y)
+        x = x + 1;
+      )
+      x = 0;
+      y = y + 1;
+    )
+
+    printString("LoopComplete");
+    printString("\n");
+  )
+
+  // ------------------------------------------------------------
+  // Main Program
+  // ------------------------------------------------------------
+  main(
+    Test6();
+    // Test 7 Is Called in Test6()
+    Test8();
+    // Test 9 is Called in Test8()
+  )
